# freelance-earnings-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/app/: entrypoints.py  main.py
src/app/chains/: analysis_chain.py
src/app/cli/: cli.py
src/app/config/: llm_config.py
src/app/document_loaders/: csv_loader.py
src/app/memory/: session_memory.py
src/app/models/: data_analyzer.py
src/app/prompts/: predefined_questions.py
src/app/utils/: errors.py
src/chains/: analysis_chain.py
src/config/: llm_config.py
src/document_loaders/: csv_loader.py
src/models/: data_analyzer.py
src/prompts/: earnings_prompts.py  predefined_questions.py
tests/: test_csv_loader.py  test_data_analyzer.py  test_session_memory.py
